crates/fsr/fsr/include/ffx_fsr2.h


typedef enum FfxFsr2QualityMode {
    FFX_FSR2_QUALITY_MODE_QUALITY                       = 1,        
    FFX_FSR2_QUALITY_MODE_BALANCED                      = 2,        
    FFX_FSR2_QUALITY_MODE_PERFORMANCE                   = 3,        
    FFX_FSR2_QUALITY_MODE_ULTRA_PERFORMANCE             = 4         
} FfxFsr2QualityMode;
typedef struct FfxFsr2DispatchDescription {
    FfxCommandList              commandList;                        
    FfxResource                 color;                              
    FfxResource                 depth;                              
    FfxResource                 motionVectors;                      
    FfxResource                 exposure;                           
    FfxResource                 reactive;                           
    FfxResource                 transparencyAndComposition;         
    FfxResource                 output;                             
    FfxFloatCoords2D            jitterOffset;                       
    FfxFloatCoords2D            motionVectorScale;                  
    FfxDimensions2D             renderSize;                         
    bool                        enableSharpening;                   
    float                       sharpness;                          
    float                       frameTimeDelta;                     
    float                       preExposure;                        
    bool                        reset;                              
    float                       cameraNear;                         
    float                       cameraFar;                          
    float                       cameraFovAngleVertical;             
} FfxFsr2DispatchDescription;
typedef struct FfxFsr2GenerateReactiveDescription {
    FfxCommandList              commandList;                        
    FfxResource                 colorOpaqueOnly;                    
    FfxResource                 colorPreUpscale;                    
    FfxResource                 outReactive;                        
    FfxDimensions2D             renderSize;                         
    float                       scale;                              
    float                       cutoffThreshold;                    
    float                       binaryValue;                        
    uint32_t                    flags;                              
} FfxFsr2GenerateReactiveDescription;
typedef struct FfxFsr2Context {
    uint32_t                    data[FFX_FSR2_CONTEXT_SIZE];        
} FfxFsr2Context;
FFX_API FfxErrorCode ffxFsr2ContextDispatch(FfxFsr2Context* context, const FfxFsr2DispatchDescription* dispatchDescription);
FFX_API FfxErrorCode ffxFsr2ContextGenerateReactiveMask(FfxFsr2Context* context, const FfxFsr2GenerateReactiveDescription* params);
FFX_API FfxErrorCode ffxFsr2ContextDestroy(FfxFsr2Context* context);
FFX_API float ffxFsr2GetUpscaleRatioFromQualityMode(FfxFsr2QualityMode qualityMode);
FFX_API FfxErrorCode ffxFsr2GetRenderResolutionFromQualityMode(
    uint32_t* renderWidth,
    uint32_t* renderHeight,
    uint32_t displayWidth,
    uint32_t displayHeight,
    FfxFsr2QualityMode qualityMode);
FFX_API int32_t ffxFsr2GetJitterPhaseCount(int32_t renderWidth, int32_t displayWidth);
FFX_API FfxErrorCode ffxFsr2GetJitterOffset(float* outX, float* outY, int32_t index, int32_t phaseCount);
FFX_API bool ffxFsr2ResourceIsNull(FfxResource resource);