crates/fsr/fsr/include/vk/ffx_fsr2_vk.h

    
    FFX_API size_t ffxFsr2GetScratchMemorySizeVK(VkPhysicalDevice physicalDevice);